# flaskGpt

./: app.py  pyproject.toml  tailwind.config.js
static/src/css/: input.css
templates/: index.html
