[tool.poetry]
name = "flaskgpt"
version = "0.1.0"
description = "ChatGPT clone en utilisant Flask"
authors = ["Vainqueur Ilunga <ilungafranck236@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
openai = "^1.33.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
